# python_to_ascend_C

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: add_custom.py  elementwise_ops.py  fused_add_relu.py  gelu_custom.py  leaky_relu_custom.py  matmul_custom.py  reduce_sum_custom.py  relu_custom.py  scale_custom.py  softmax_custom.py
src/ascend_transpiler/: __init__.py  cli.py  exceptions.py  transpiler.py
src/ascend_transpiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ascend_transpiler/analyzer/: __init__.py  ast_analyzer.py
src/ascend_transpiler/codegen/: elementwise.py  generator.py  matmul.py  reduction.py
src/ascend_transpiler/codegen/templates/: kernel_elementwise.cpp.j2  kernel_matmul.cpp.j2  kernel_reduction.cpp.j2  tiling_data.h.j2  tiling_func.cpp.j2
src/ascend_transpiler/dsl/: __init__.py  decorators.py  types.py
src/ascend_transpiler/ir/: __init__.py  operator_ir.py
src/ascend_transpiler/ops/: __init__.py  mappings.py
src/ascend_transpiler/tiling/: __init__.py  calculator.py
tests/: test_analyzer.py  test_codegen_elementwise.py  test_dsl.py  test_new_ops.py  test_tiling.py  test_transpiler.py
