[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascend-transpiler"
version = "0.1.0"
description = "Transpile Python operator DSL to Ascend C (Huawei Ascend NPU)"
requires-python = ">=3.10"
dependencies = ["jinja2>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "isort", "mypy"]

[project.scripts]
ascend-transpiler = "ascend_transpiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
